k8s/istio/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-mongodb
  namespace: one8pulse
spec:
  hosts:
  - "*.mongodb.net"
  location: MESH_EXTERNAL
  ports:
  - number: 27017
    name: mongodb
    protocol: TCP
  resolution: DNS
