k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: one8pulse-virtualservice
  namespace: one8pulse
spec:
  hosts:
  - "api.one8pulse.devcloudzone.store"
  - "one8pulse.devcloudzone.store"
  gateways:
  - one8pulse-gateway
  http:
  - match:
    - uri:
        prefix: /api/
    route:
    - destination:
        host: one8pulse-gateway
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: one8pulse-gateway
        port:
          number: 8080
